--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "jest": "^22.1.4",
+    "lodash": "^4.17.10",
     "migrate-mongoose": "^3.2.2",
     "mongoose": "^4.11.1",
     "nodemon": "^1.11.0",
@@ -28,6 +29,7 @@
     "path-parser": "^2.0.2",
     "puppeteer": "^1.0.0",
     "redis": "^2.8.0",
+    "reselect": "^3.0.1",
     "uuid": "^3.2.1"
   }
 }
